--- a/Examples/ResourceCenterDemo/Resources/Base.lproj/Main.storyboard
+++ b/Examples/ResourceCenterDemo/Resources/Base.lproj/Main.storyboard
@@ -1,24 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iS3-cl-Bzb">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Chat View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
+                <viewController id="BYZ-38-t0r" customClass="ChatViewController" customModule="RCDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="J3O-oW-SVj">
+                        <barButtonItem key="rightBarButtonItem" title="Info" id="y2K-Vw-qk5">
+                            <connections>
+                                <segue destination="ASZ-f5-UPl" kind="show" identifier="ChatViewShowChannelDetailSegue" id="kaU-sj-fLT"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="Hly-bS-Sm1" kind="show" identifier="ChatViewShowUserDetailSegue" id="dOU-a9-es2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1014" y="774"/>
+        </scene>
+        <!--Channel Details View Controller-->
+        <scene sceneID="5Tb-5G-Rei">
+            <objects>
+                <viewController id="ASZ-f5-UPl" customClass="ChannelDetailsViewController" customModule="RCDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7gA-hZ-3SQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description of the chat group" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PPy-4t-5WX">
+                                <rect key="frame" x="20" y="114" width="374" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="-1" height="-1"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hGb-rr-G2K">
+                                <rect key="frame" x="0.0" y="250.33333333333334" width="414" height="485.66666666666663"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MemberStatusCell" textLabel="PaZ-6F-M9f" style="IBUITableViewCellStyleDefault" id="Vex-vl-nyS">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vex-vl-nyS" id="vjg-cJ-P98">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="PaZ-6F-M9f">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.666666666666664"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PPy-4t-5WX" firstAttribute="leading" secondItem="Mwq-Qp-41b" secondAttribute="leading" constant="20" id="560-Rf-qyT"/>
+                            <constraint firstItem="hGb-rr-G2K" firstAttribute="centerX" secondItem="Mwq-Qp-41b" secondAttribute="centerX" id="6RP-w2-Bmb"/>
+                            <constraint firstItem="hGb-rr-G2K" firstAttribute="height" secondItem="7gA-hZ-3SQ" secondAttribute="height" multiplier="0.66" id="Guh-iR-Vim"/>
+                            <constraint firstItem="hGb-rr-G2K" firstAttribute="width" secondItem="7gA-hZ-3SQ" secondAttribute="width" id="Oc6-y4-Zge"/>
+                            <constraint firstItem="Mwq-Qp-41b" firstAttribute="bottom" secondItem="hGb-rr-G2K" secondAttribute="bottom" id="Uvm-a1-dwr"/>
+                            <constraint firstItem="PPy-4t-5WX" firstAttribute="top" secondItem="Mwq-Qp-41b" secondAttribute="top" constant="50" id="WlQ-jc-0XE"/>
+                            <constraint firstItem="Mwq-Qp-41b" firstAttribute="trailing" secondItem="PPy-4t-5WX" secondAttribute="trailing" constant="20" id="yYc-rO-icv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Mwq-Qp-41b"/>
+                    </view>
+                    <connections>
+                        <outlet property="activeMemberTableView" destination="hGb-rr-G2K" id="mOg-wh-neO"/>
+                        <outlet property="channelDescriptionLabel" destination="PPy-4t-5WX" id="QYx-zF-QOZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZSa-rz-UV3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1856.521739130435" y="773.64130434782612"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="p7D-1e-NdD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iS3-cl-Bzb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="52I-ag-ZSM">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xbN-2m-gEY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9ar-BB-upU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="269.56521739130437" y="773.64130434782612"/>
+        </scene>
+        <!--User Detail View Controller-->
+        <scene sceneID="h9F-j1-U2e">
+            <objects>
+                <viewController id="Hly-bS-Sm1" customClass="UserDetailViewController" customModule="RCDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XZX-68-jK6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qCc-Mv-btq">
+                                <rect key="frame" x="-1" y="400" width="414" height="336"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UserDetailTableCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserDetailTableCell" textLabel="rb8-de-h9l" detailTextLabel="d2a-HX-P9N" style="IBUITableViewCellStyleValue1" id="el0-Wh-dtr">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="el0-Wh-dtr" id="RnP-wu-KWa">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rb8-de-h9l">
+                                                    <rect key="frame" x="20.000000000000004" y="11.999999999999998" width="33.333333333333336" height="20.333333333333332"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="d2a-HX-P9N">
+                                                    <rect key="frame" x="350" y="11.999999999999998" width="44" height="20.333333333333332"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7eT-03-stq">
+                                <rect key="frame" x="138.66666666666669" y="114" width="136.66666666666669" height="111"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7eT-03-stq" firstAttribute="top" secondItem="LT0-lk-1fx" secondAttribute="top" constant="50" id="4az-1J-CUc"/>
+                            <constraint firstItem="7eT-03-stq" firstAttribute="width" secondItem="XZX-68-jK6" secondAttribute="width" multiplier="0.33" id="QU0-jk-Mdm"/>
+                            <constraint firstItem="LT0-lk-1fx" firstAttribute="bottom" secondItem="qCc-Mv-btq" secondAttribute="bottom" id="UD6-Gi-XtB"/>
+                            <constraint firstItem="7eT-03-stq" firstAttribute="centerX" secondItem="XZX-68-jK6" secondAttribute="centerX" id="VIN-1x-Xb8"/>
+                            <constraint firstItem="7eT-03-stq" firstAttribute="height" secondItem="qCc-Mv-btq" secondAttribute="height" multiplier="0.33" id="f1Z-Ko-2oX"/>
+                            <constraint firstItem="qCc-Mv-btq" firstAttribute="height" secondItem="LT0-lk-1fx" secondAttribute="height" multiplier="0.5" id="jC5-eO-GgQ"/>
+                            <constraint firstItem="LT0-lk-1fx" firstAttribute="trailing" secondItem="qCc-Mv-btq" secondAttribute="trailing" constant="1" id="n1W-ko-4bE"/>
+                            <constraint firstItem="LT0-lk-1fx" firstAttribute="leading" secondItem="qCc-Mv-btq" secondAttribute="leading" constant="1" id="wDb-W5-iX5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LT0-lk-1fx"/>
+                    </view>
+                    <connections>
+                        <outlet property="avatarImageView" destination="7eT-03-stq" id="tdE-lG-LW4"/>
+                        <outlet property="tableView" destination="qCc-Mv-btq" id="eT0-kb-5G2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lgx-UZ-wPv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1011.5942028985507" y="1554.6195652173915"/>
         </scene>
     </scenes>
 </document>
