--- a/Examples/ResourceCenterDemo/Resources/Base.lproj/Main.storyboard
+++ b/Examples/ResourceCenterDemo/Resources/Base.lproj/Main.storyboard
@@ -21,9 +21,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <segue destination="Hly-bS-Sm1" kind="show" identifier="ChatViewShowUserDetailSegue" id="dOU-a9-es2"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -116,7 +113,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qCc-Mv-btq">
-                                <rect key="frame" x="-1" y="400" width="414" height="336"/>
+                                <rect key="frame" x="-1" y="378" width="414" height="358"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UserDetailTableCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserDetailTableCell" textLabel="rb8-de-h9l" detailTextLabel="d2a-HX-P9N" style="IBUITableViewCellStyleValue1" id="el0-Wh-dtr">
@@ -146,7 +143,7 @@
                                 </prototypes>
                             </tableView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7eT-03-stq">
-                                <rect key="frame" x="138.66666666666669" y="114" width="136.66666666666669" height="111"/>
+                                <rect key="frame" x="138.66666666666669" y="70" width="136.66666666666669" height="118"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -169,7 +166,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lgx-UZ-wPv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1011.5942028985507" y="1554.6195652173915"/>
+            <point key="canvasLocation" x="1013" y="1542"/>
         </scene>
     </scenes>
 </document>
